# backend/internal/router/cart_routes.go
@@ -1,0 +1,16 @@
+package router
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/leoferamos/aroma-sense/internal/auth"
+	"github.com/leoferamos/aroma-sense/internal/handler"
+)
+
+// CartRoutes sets up the cart-related routes
+func CartRoutes(r *gin.Engine, handler *handler.CartHandler) {
+	cartGroup := r.Group("/cart")
+	cartGroup.Use(auth.JWTAuthMiddleware())
+	{
+		cartGroup.GET("", handler.GetCart)
+	}
+}
